<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/button_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular"
            />
        <Button
            android:id="@+id/button_gentle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gentle"
            />
        <Button
            android:id="@+id/button_rock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rock"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/image_dish"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@id/layout_mode"
        android:layout_centerHorizontal="true"
        android:src="@drawable/image_dish"
        />

    <TextView
        android:id="@+id/text_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_dish"
        android:layout_centerHorizontal="true"
        android:textColor="#666666"
        android:text="歌名"
        />
    <LinearLayout
        android:id="@+id/layout_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_song"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:id="@+id/text_singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#666666"
            android:text="歌手"
            />
        <TextView
            android:id="@+id/text_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#666666"
            android:text="专辑"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/layout_album"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/image_left"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/control_left"
            />
        <ImageView
            android:id="@+id/image_center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/control_center"
            />
        <ImageView
            android:id="@+id/image_right"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/control_right"
            />
    </LinearLayout>

</RelativeLayout>
